--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "echarts": "^5.4.0",
+    "echarts-gl": "^2.0.9",
+    "lodash": "^4.17.21",
+    "uuid": "^9.0.0",
     "vue": "^3.2.13",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
